<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>PiCam2IMG</name> <!-- NAME OF THE PACKAGE -->
  <version>0.0.1</version>
  <description>Publishes an image of the camera every few seconds.</description> 
  <maintainer email="franciszek.moszczuk@gmail.com">Franciszek Moszczuk</maintainer> 
  <license>MIT</license> 

  <!-- ament_cmake is the build system for CMake based packages in ROS 2, https://docs.ros.org/en/humble/How-To-Guides/Ament-CMake-Documentation.html -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

